crates/rome_cli/tests/snapshots/main_configuration/correct_root.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": true,
    "formatWithErrors": true,
    "indentStyle": "tab",
    "indentSize": 2,
    "lineWidth": 80
  },
  "linter": {
    "enabled": true,
    "rules": {
        "complexity": {
            "useSimplifiedLogicExpression": "warn"
        },
        "style": {
            "useTemplate": {
                "level": "error"
            }
        },
        "correctness": {
            "noCatchAssign": "error",
            "noLabelVar": {
                "level": "warn"
            },
            "noUnreachable": "off"
        }
    }
  },
  "javascript": {
    "globals": ["$"],
    "formatter": {
      "quoteStyle": "double",
      "quoteProperties": "asNeeded"
    }
  }
}
```

# Emitted Messages


