crates/rome_cli/tests/snapshots/main_configuration/incorrect_globals.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": false
  },
  "javascript": {
    "globals": [false]
  }
}
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × invalid type: boolean `false`, expected a string at line 6 column 21
  


```


