crates/rome_cli/tests/snapshots/main_configuration/incorrect_rule_name.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "correctness": {
        "foo_rule": "off"
      },
      "style": {
        "what_the_hell": "off"
      }
    }
  }
}
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Rome exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
rome.json:6:13 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Found an unknown key `foo_rule`.
  
    4 │     "rules": {
    5 │         "correctness": {
  > 6 │             "foo_rule": "off"
      │             ^^^^^^^^^^
    7 │         },
    8 │         "style": {
  
  i Accepted keys
  
  - recommended
  - all
  - noChildrenProp
  - noConstAssign
  - noConstructorReturn
  - noEmptyPattern
  - noGlobalObjectCalls
  - noInnerDeclarations
  - noInvalidConstructorSuper
  - noNewSymbol
  - noPrecisionLoss
  - noRenderReturnValue
  - noSetterReturn
  - noStringCaseMismatch
  - noSwitchDeclarations
  - noUndeclaredVariables
  - noUnnecessaryContinue
  - noUnreachable
  - noUnreachableSuper
  - noUnsafeFinally
  - noUnsafeOptionalChaining
  - noUnusedLabels
  - noUnusedVariables
  - noVoidElementsWithChildren
  - noVoidTypeReturn
  - useIsNan
  - useValidForDirection
  - useYield
  

```


