crates/rome_cli/tests/snapshots/main_configuration/line_width_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "lineWidth": 500
  }
}
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Rome couldn't load the configuration file, here's why: 
    The line width exceeds the maximum value (320)
     at line 4 column 3
  


```


